--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
        </div>
       <div id="content">
         <!-- insert the page content here -->
+		
         <h1>Welcome to Colloquium</h1>
+		<img src="style/1.jpg" alt="colloquium head" class="khare_sir1"><br>
+		
         <p>Mathematics Colloquium organises various events of Mathematics Department throughout the year. We are a group of 
 		people headed by our professor in-charge and president of Mathematics Colloquium.</p><br>
 		<p>We conduct Farewell for passing out students, Teacher’s Day, Fresher’s event. 
