--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
         <!-- insert the page content here -->
         <h1>Contact Us</h1>
         <p>Below is an example of how a contact form might look with this template:</p>
-        <form action="" method="post">
+        <form action="contact_page.php" method="post">
           <div class="form_settings">
-            <p><span>Name</span><input class="contact" type="text" name="your_name" value="" /></p>
-            <p><span>Email Address</span><input class="contact" type="text" name="your_email" value="" /></p>
-            <p><span>Message</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
-            <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="submit" /></p>
+            <p><span>Name</span><input class="contact" type="text" name="name" value="" /></p>
+            <p><span>Email Address</span><input class="contact" type="email" name="email" value="" /></p>
+            <p><span>Message</span><textarea class="contact textarea" rows="8" cols="50" name="message"></textarea></p>
+            <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="Submit" /></p>
           </div>
         </form>
         <p><br /><br />NOTE: A contact form such as this would require some way of emailing the input to an email address.</p>
