correction in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -67,40 +67,40 @@
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column1">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
   </div>
   <div class="column1">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-	<img src="style/tea.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
   </div>  
   <div class="column1">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-	<img src="style/tea.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
   </div>
   <div class="column1">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-    <img src="style/tea.jpg" style="width:100%">
-	<img src="style/tea.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/talk.jpg" style="width:100%">
   </div>
 </div>
 
