--- a/contact.html
+++ b/contact.html
@@ -36,26 +36,25 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h3>Latest News</h3>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <p></p>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3>
         <ul>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Alumni</a></li>
-          <li><a href="#">Downloads</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="#">Mathematics Colloquium website inaugurated....</a></li>
+          <li><a href="#">news1</a></li>
+          <li><a href="#">news2</a></li>
+          <li><a href="#">news3</a></li>
         </ul>
-        
+		
+		<h3>MAGAZINES</h3>
+        <ul>
+          <li><a href="style/xponent2016.pdf">2016</a></li>
+          <li><a href="style/xponent2017.pdf">2017</a></li>
+          <li><a href="style/xponent2018.pdf">2018</a></li>
+          <li><a href="#">2019</a></li>
+        </ul>
       </div>
       <div id="content">
         <!-- insert the page content here -->
         <h1>Contact Us</h1>
-        <p>Below is an example of how a contact form might look with this template:</p>
+        <p>For any kind of query and information please contact below:</p>
         <form action="contact_page.php" method="post">
           <div class="form_settings">
             <p><span>Name</span><input class="contact" type="text" name="name" value="" /></p>
@@ -64,7 +63,9 @@
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="Submit" /></p>
           </div>
         </form>
-        <p><br /><br />NOTE: A contact form such as this would require some way of emailing the input to an email address.</p>
+		<h2>NOTE:-</h2><p><b>For any kind of query and information please contact us by email at 
+		<a>mathematicscolloquium.iitkgp@gmail.com</a></b></p>
+        
       </div>
     </div>
     <div id="content_footer"></div>
