--- a/event.html
+++ b/event.html
@@ -36,19 +36,18 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h3>Latest News</h3>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <p></p>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3>
         <ul>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Alumni</a></li>
-          <li><a href="#">Downloads</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="#">Mathematics Colloquium website inaugurated....</a></li>
+          <li><a href="#">news1</a></li>
+          <li><a href="#">news2</a></li>
+          <li><a href="#">news3</a></li>
+        </ul>
+        <h3>MAGAZINES</h3>
+        <ul>
+          <li><a href="style/xponent2016.pdf">2016</a></li>
+          <li><a href="style/xponent2017.pdf">2017</a></li>
+          <li><a href="style/xponent2018.pdf">2018</a></li>
+          <li><a href="#">2019</a></li>
         </ul>
         
       </div>
