--- a/gallery.html
+++ b/gallery.html
@@ -36,19 +36,18 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h3>Latest News</h3>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <p></p>
-        <h4>New Website Launched</h4>
-        <h5>January 1st, 2010</h5>
-        <p>2010 sees the redesign of our website. Take a look around and let us know what you think.<br /><a href="#">Read more</a></p>
-        <h3>Useful Links</h3>
         <ul>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Alumni</a></li>
-          <li><a href="#">Downloads</a></li>
-          <li><a href="#">Announcements</a></li>
+          <li><a href="#">Mathematics Colloquium website inaugurated....</a></li>
+          <li><a href="#">news1</a></li>
+          <li><a href="#">news2</a></li>
+          <li><a href="#">news3</a></li>
+        </ul>
+        <h3>MAGAZINES</h3>
+        <ul>
+          <li><a href="style/xponent2016.pdf">2016</a></li>
+          <li><a href="style/xponent2017.pdf">2017</a></li>
+          <li><a href="style/xponent2018.pdf">2018</a></li>
+          <li><a href="#">2019</a></li>
         </ul>
         
       </div>
@@ -68,39 +67,39 @@
 <div class="row"> 
   <div class="column1">
     <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/pic1.jpg" style="width:100%">
+    <img src="style/pic2.jpg" style="width:100%">
+    <img src="style/pic3.jpg" style="width:100%">
+    <img src="style/pic4.jpg" style="width:100%">
+    <img src="style/pic5.jpg" style="width:100%">
+    <img src="style/pic6.jpg" style="width:100%">
   </div>
   <div class="column1">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/pic7.jpg" style="width:100%">
+    <img src="style/pic8.jpg" style="width:100%">
+    <img src="style/pic10.jpg" style="width:100%">
+    <img src="style/pic11.jpg" style="width:100%">
+    <img src="style/pic12.jpg" style="width:100%">
+    <img src="style/pic13.jpg" style="width:100%">
+    <img src="style/pic14.jpg" style="width:100%">
   </div>  
   <div class="column1">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/pic15.jpg" style="width:100%">
+    <img src="style/pic16.jpg" style="width:100%">
+    <img src="style/pic17.jpg" style="width:100%">
+    <img src="style/pic9.jpg" style="width:100%">
+    <img src="style/pic18.jpg" style="width:100%">
+    <img src="style/pic19.jpg" style="width:100%">
+    <img src="style/pic20.jpg" style="width:100%">
   </div>
   <div class="column1">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
-    <img src="style/talk.jpg" style="width:100%">
+    <img src="style/pic21.jpg" style="width:100%">
+    <img src="style/pic22.jpg" style="width:100%">
+    <img src="style/pic23.jpg" style="width:100%">
+    <img src="style/pic24.jpg" style="width:100%">
+    <img src="style/pic25.jpg" style="width:100%">
+    <img src="style/pic26.jpg" style="width:100%">
+    <img src="style/pic27.jpg" style="width:100%">
   </div>
 </div>
 
